<resources>
    <string name="app_name">Relationship Tracker | Simple Apps</string>
    <string name="nav_home">Counter</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_settings">Settings</string>

    <string name="set_start_date">Set Start Date</string>
    <string name="select_location">Select Location on Map</string>
    <string name="change_language">Change Language</string>

    <string name="years_label">%d years</string>
    <string name="months_label">%d months</string>
    <string name="days_full">%d days</string>
    <string name="timezone_label">Timezone: %s</string>
    <string name="last_sync_label">Last sync: %s</string>
    <string name="last_sync_never">Last sync: Never</string>
    <string name="set_start_date_hint">Set start date</string>

    <string name="sync_button">Sync</string>
    <string name="synced_successfully">Synced successfully</string>
    <string name="sync_failed">Sync failed</string>
    <string name="network_error">Network error</string>

    <string name="add_event">Add Event</string>
    <string name="event_name_hint">Event Name</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="upcoming_events">Upcoming Events</string>
    <string name="no_upcoming_events">No upcoming events</string>
    <string name="days_left">%d days left</string>
    <string name="hours_left">%d hours left</string>
    <string name="starts_soon">Starts soon!</string>

    <string name="language_en">English</string>
    <string name="language_ru">Русский</string>
    <string name="auto_translate">Auto-translate</string>
    <string name="translating">Translating…</string>
    <string name="downloading_model">Downloading language model…</string>
    <string name="select_target_language">Select Target Language</string>
    <string name="search_language">Search language…</string>
    <string name="edit_api">Edit API Instances</string>
    <string name="read_logs">Read Logs</string>
    <string name="delete_translation">Delete Translation</string>
    <string name="map_api_url">Map API URL</string>
    <string name="time_api_url">Time API URL</string>
    <string name="api_key_optional">API Key (optional)</string>
    <string name="copy_logs">Copy Logs</string>
    <string name="logs_copied">Logs copied to clipboard</string>
    <string name="delete_confirm">Are you sure you want to delete this translation?</string>

    <string name="nav_header_title">Relationship Tracker | Simple Apps</string>
    <string name="nav_header_subtitle">Welcome back</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="fab_content_description">Action button</string>
</resources>