<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.opengrid.simplerelationshiptracker.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.opengrid.simplerelationshiptracker.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings_tracker" />

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.opengrid.simplerelationshiptracker.ui.calendar.CalendarFragment"
        android:label="@string/nav_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_location"
        android:name="com.opengrid.simplerelationshiptracker.ui.location.LocationFragment"
        android:label="Select Location"
        tools:layout="@layout/fragment_location" />
</navigation>